--- a/mobile/style.css
+++ b/mobile/style.css
@@ -1,29 +1,24 @@
 /* CSS Document */
 
 body {
-  background: #303050;
-  font-family: "Lucide Grande", Verdana, Arial, sans-serif;
-  margin: 0px;
-  text-align: center;
-  font-size: 100%;
-  width: 320px;
-  background: #303050;
-  font-family: "Lucide Grande", Verdana, Arial, sans-serif;
-  margin: 0px;
-  text-align: center;
-  font-size: 100%;
-  width: 480px;
+	background: #ffffff;
+	font-family: "Lucide Grande", Verdana, Arial, sans-serif;
+	margin: 0px;
+	text-align: center;
+	font-size: 100%;
+	width: 480px;
 }
-
+p {
+	font:Arial, Helvetica, sans-serif;
+}
 #contents {
-  background: #f0f0f0;
-  text-align: center;
-  margin: 1em auto 1em auto;
-  padding: 1em;
-  left: 0em;
-  width: 280px;
-  font-size: .7em;
-  /*
+	background: #f0f0f0;
+	text-align: center;
+	margin: 1em auto 1em auto;
+	padding: 1em;
+	left: 0em;
+	width: 280px;
+	font-size: .7em;/*
   width: 440px;
   width: 54em;
   margin: 1em auto 1em auto;
@@ -33,76 +28,104 @@ body {
   */
 }
 #IEROOT #contents {
-  background: #f0f0f0;
-  text-align: center;
-  margin: 10px auto 10px auto;
-  padding: 10px;
-  left: 0px;
-  width: 440px;
+	background: #f0f0f0;
+	text-align: center;
+	margin: 10px auto 10px auto;
+	padding: 10px;
+	left: 0px;
+	width: 440px;
 }
-
 #contents-inner {
-  width: 100%;
-  height: 100%;
-  top: 0px;
+	width: 100%;
+	height: 100%;
+	top: 0px;
 }
-
-#title { 
-	font-size: 3em; 
-	text-align: center; 
-	font-weight: bold; 
-	margin-bottom: 10px; 
-	}
-
-.itemcontainer
-{
-  width: 200px;
-  /*
+#title {
+	font-size: 3em;
+	text-align: center;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+.itemcontainer {
+	background: #FFF;
+	width: 200px;
+	/*
   height: 60px;
   */
   height: 42px;
-  margin: 2px auto 2px auto;
-  position:relative;
-  display: block;
+	margin: 7px auto;
+	position:relative;
+	display: block;
+	padding: 0px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	border: 1px solid #666666;
+	-webkit-box-shadow: 2px 2px 2px 2px rgba(25, 25, 25, .1);
+	-moz-box-shadow: 2px 2px 2px 2px rgba(25, 25, 25, .1);
+	box-shadow: 2px 2px 2px 2px rgba(25, 25, 25, .1);
 }
-
 .item {
-  font-size: 1.5em;
-  height: 42px;
-  width: 200px;
-  display: block;
-  position:absolute;
+	font-size: 15px;
+	height: 42px;
+	width: 200px;
+	display: block;
+	position:absolute;
+	text-align:center;
 }
-
 .score-container {
-  width: 40px;
-  height: 42px;
-  display: table-cell;
-  vertical-align: middle;
+	width: 40px;
+	height: 42px;
+	display: table-cell;
+	vertical-align: middle;
 }
-
-.ascore { 
-	background: #00ef80; 
+.ascore, .bscore, .fscore {
+	-webkit-border-top-left-radius: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+	-moz-border-radius-topleft: 5px;
+	-moz-border-radius-bottomleft: 5px;
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
 	}
-
+.ascore {
+	background: none repeat scroll 0 0 #00EF80;
+	
+}
+.bscore {
+	background: none repeat scroll 0 0 #FF6633;
+}
+.fscore {
+	background: none repeat scroll 0 0 #F00000;
+}
 .info {
-  top: 0px;
-  left: 42px;
-  width: 150px;
-  display: inline-block;
-  position: absolute;
+	top: 0px;
+	left: 42px;
+	width: 150px;
+	display: inline-block;
+	position: absolute;
+	text-align:left;
 }
-.name { width: 150px; }
-.address { width: 150px; }
-
-#map
-{
-  position: static;
+.name {
+	width: 150px;
+	font:bold;
+	font-size:16px;
 }
-
+.address {
+	width: 150px;
+	font-size:12px;
+}
+#map {
+	position: static;
+	padding:10px 0px;
+}
 #insp-hist-title {
 	margin:10px;
 }
-
 .insp-hist {
+}
+-.name {
+width: 150px;
+}
+-.address {
+width: 150px;
 }
